assets/css/index.scss
---
---

@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Montserrat:wght@400;500;600;700;800;900&display=swap');

/** COLORES **/
$verde:#01afaf;
$verdeClaro: #3bd2d278;
$verdeOscuro: #08a4a4;
$blanco:#FFFFFF;
$negro:#1c1c1c;
$gris:#919191;
$grisClaro:#bcbcbc;
$rojo:#ff3867;


/** FUENTES **/
$fuente_titulos:'Montserrat', sans-serif;
$fuente_textos: 'Lato', sans-serif;


body{
    margin:0;
    padding:0;
    font-family: $fuente_textos;
    color:$negro;
    line-height: 1.7em;
    font-size: 1.21rem;
}
a{
    color: $verde;
    font-weight: 800;
}
.content{
    padding: 0 10% 0 10%;
}
.logo{
    width: 140px;
    margin: 33px 0 0 35px;
}
.barSup{
    height: 17px;
    background-color: $verdeClaro;
}
h2{
    margin: 80px 0 40px 0;
    color:$verde;
    font-size: 2.6rem;
    font-family: $fuente_titulos;
    font-weight: 500;
}
h3{
    color:$verde;
    font-size: 1.9rem;
    font-family: $fuente_titulos;
    margin-top: 0;
    line-height: 2.5rem;
}
#chartAragon{
    width: 100%;
}
footer{
    height: 17px;
    margin-top: 20px;
    background-color: $verdeClaro;
}
table{
    width:100%;
    margin-top: 40px;
}
th{
    text-transform: uppercase;
    font-size: 0.8em;
    text-align: center;
    background-color: $verde;
    color:$blanco;
    padding: 1.1%;
    line-height: 1.2em;
}
td{
    border-bottom: $grisClaro 1px solid;
    text-align: right;
    padding-right: 10px;
    width: 14%;
}
.nota.fuente{
    margin-top: 80px;
}
.negative{ color: $rojo;}
.positive{ color: $verdeOscuro;}
.negative, .positive{
    font-weight: 800;
    font-size: 0.9rem;
}
.arrow{
    width:10px;
}
.tendency{
    width:45px;
}
.diary, .tendency{
    display: block;
    float: right;
}
.arrow.up{
    transform: rotate(180deg);
}
.dashboard{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: stretch;
    align-content: stretch;
}
.card{
    flex-grow: 1;
    width: 24%;
    border: 1px solid $verdeClaro;
    margin:10px;
    padding: 20px;
    position: relative;
}
.number{
    font-size: 3rem;
}
.dashboard svg{
    position: absolute;
    overflow: overlay;
}
.dashboard #icoConfirmados{
    width: 117px;
    bottom: 25px;
    right: 25px;
}
.dashboard #icoAltas{
    width: 94px;
    bottom: 25px;
    right: 25px;
}
.dashboard #icoFallecimientos{
    width: 94px;
    bottom: 25px;
    right: 25px;
}
.dashboard #icoIngresos{
    width: 94px;
    bottom: 25px;
    right: 25px;
}
.dashboard #icoUci{
    width: 94px;
    bottom: 25px;
    right: 25px;
}
.dashboard #icoSanitarios{
    width: 94px;
    bottom: 25px;
    right: 25px;
}
.dashboard .detalle{
    width: 60%;

}
.dashboard.today svg{
    position: absolute;
    overflow: overlay;
}
.dashboard.today #icoConfirmados{
    width: 117px;
    bottom: 31px;
    right: 48px;
}
.dashboard.today #icoAltas{
    width: 94px;
    bottom: 37px;
    right: 40px;
}
.dashboard.today #icoFallecimientos{
    width: 94px;
    bottom: 37px;
    right: 40px;
}

